# yandex_contests

binary_search/: arry.cpp  elections.cpp  fraction.cpp  play.cpp  plus.cpp  raport.cpp  saruman.cpp  sea_battle.cpp  velo.cpp
comparisons/: base_string.cpp  compare_strings.cpp  ghost.cpp  main.cpp  palindrom.cpp  palindrom_test.cpp  zfunc.cpp
complexety/: chess.cpp  chess.py  dword.cpp  football.cpp  game.cpp  goondex.cpp  numbers.cpp  petya_programmer.cpp  running.cpp  startup.cpp  trees.cpp
final/: 1st.cpp  1st.py  2nd.cpp  3rd.cpp
graphs/: buses.cpp  least_dist.cpp  least_path.cpp  olims.cpp  olims.py  speedup.cpp
linear_search/: array.cpp  chess_form.cpp  fish.cpp  grid.cpp  reccts.cpp  ropes.cpp  sea_fight.cpp  snail.cpp  table_game.cpp  wheel.cpp
permutations/: chess.cpp  cycle.cpp  graph.cpp  paranthesis.cpp  permutations.cpp
prefix_suffix/: cars.cpp  check.py  dates.cpp  prefix.cpp  task_d.cpp  task_e.cpp  task_f.cpp  task_g.cpp  task_h.cpp  task_i.cpp  task_j.cpp
sets_and_maps/: anagrams.py  dict.py  diff_one.py  experiment.cpp  football.py  matches.cpp  music.py  p2p.cpp  sets.py  square.cpp
sorts/: merge.cpp  merge_sort.cpp  partition.cpp  quick_sort.cpp  radix_sort
stack_queue/: task_a.cpp  task_b.cpp  task_c.cpp  task_d.cpp  task_e.cpp  task_f.cpp  task_g.cpp  task_h.cpp  task_i.cpp  task_j.cpp
sumer_school/: emo_boy.cpp  fish.cpp  keyboard.cpp  zero_cross.cpp
testing24/: letter.cpp  plot.cpp  wardrobe.cpp
think-cell/: CMakeLists.txt  Makefile  hello_boost.cpp  interval_map.cpp  main.cpp
trees/: g.cpp  g.py  task_a.cpp  task_b.cpp  (+8 more)
(+14 files in other folders)
